<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="taos.timedestiny.menus.Inventory"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myborder"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/menuopciones"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myboton"
        android:text="@string/guardar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cargar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myboton"
        android:text="@string/cargar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myboton"
        android:text="@string/salir"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/regresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myboton"
        android:text="@string/cancelar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>