<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="MergeRootFrame" 
    tools:context="taos.timedestiny.menus.Status" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myborder"
            android:contentDescription="@string/descriptionimg"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textNombreField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:width="70dp" />

                <TextView
                    android:id="@+id/textNombreList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/nombre" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textTimeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:width="70dp" />

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="29dp"
        android:background="@drawable/myboton"
        android:minWidth="80dip"
        android:onClick="onPersonal"
        android:contentDescription="@string/descriptionimg"
        android:scaleType="center"
        android:src="@drawable/personal" />

    <ImageButton
        android:id="@+id/sociable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/personal"
        android:layout_below="@+id/personal"
        android:background="@drawable/myboton"
        android:minWidth="80dip"
        android:onClick="onSociable"
        android:scaleType="center"
        android:contentDescription="@string/descriptionimg"
        android:src="@drawable/sociable" />

    <ImageButton
        android:id="@+id/cargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sociable"
        android:layout_below="@+id/sociable"
        android:background="@drawable/myboton"
        android:minWidth="80dip"
        android:onClick="onCono"
        android:contentDescription="@string/descriptionimg"
        android:src="@drawable/conocimientos" />

    <ImageButton
        android:id="@+id/fisico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cargar"
        android:layout_below="@+id/cargar"
        android:background="@drawable/myboton"
        android:minWidth="80dip"
        android:onClick="onFisico"
        android:contentDescription="@string/descriptionimg"
        android:src="@drawable/fisico"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fisico"
        android:layout_alignTop="@+id/personal"
        android:layout_toRightOf="@+id/personal"
        android:background="@drawable/myborder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/genero"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/B1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/B3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/B4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="15dp"
        android:background="@drawable/myboton"
        android:minHeight="64dip"
        android:onClick="onRegresar"
        android:text="@string/regresar"
        android:textSize="22sp"
        android:textStyle="bold" />

</RelativeLayout>